<resources>
    <string name="app_name">SpiritAirlinePOC</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="dummy_login_pass">Dummy email : eve.holt@reqres.in \n Dummy Password : cityslicka</string>
    <string name="spirit_airlines_poc">Spirit Airlines POC</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="local">local</string>
    <string name="network">network</string>
    <string name="there_is_no_item">There is no item!</string>


    <!-- Network Errors-->
    <string name="networkError">Oh! You are not connected to a wifi or cellular data network. Please connect and try again</string>
    <string name="networkErrorCode">NO_INTERNET_CONNECTION</string>
    <string name="unknownError">Something went wrong!</string>

    <string name="requestTimeOutError">Oooops! We couldn’t capture your request in time. Please try again.</string>

    <string name="responseMalformedJson">Oops! We hit an error. Try again later.</string>
</resources>
