<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="LoginViewModel"
            type="com.niit.spiritairlinepoc.ui.login.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                style="@style/parent"
                android:background="@drawable/login_shape_bk"
                android:orientation="vertical">

                <ImageView
                    style="@style/parent"
                    android:background="@drawable/ic_login_bk" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                style="@style/headerText"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/spirit_airlines_poc" />

            <androidx.cardview.widget.CardView
                style="@style/card"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/viewsMargin"
                android:layout_marginBottom="@dimen/viewsMargin"
                android:background="@color/whiteCardColor"
                android:elevation="5dp"
                app:cardCornerRadius="@dimen/cardCornerRadius">


                <LinearLayout
                    style="@style/linearParent"
                    android:layout_gravity="center"
                    android:padding="@dimen/viewsMargin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/headerTextPrimary"
                        android:text="@string/login" />

                    <EditText
                        android:id="@+id/txtEmailAddress"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                    <EditText
                        android:id="@+id/txtPassword"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                    <TextView
                        android:id="@+id/txtErrorMassage"
                        style="@style/viewParent"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/redColor"
                        android:textSize="@dimen/textSize"
                        android:layout_gravity="center"/>


                    <Button
                        android:id="@+id/btnLogin"
                        style="@style/buttonStyle"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/viewsMargin"
                        android:onClick="@{(v) -> LoginViewModel.onClick()}"
                        android:text="@string/login" />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/viewsMargin"
                        android:text="@string/dummy_login_pass"
                        android:textAlignment="center"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:indeterminateTint="@color/black_effective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{LoginViewModel.isLoading ? View.VISIBLE : View.GONE}" />

    </FrameLayout>

</layout>